<resources>
    <string name="app_name">MyNews</string>

    <!-- Toolbar title -->
    <string name="search_articles">Search Articles</string>
    <string name="search_results">Search Results</string>

    <!-- Toolbar's item title -->
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>

    <!-- Tab title -->
    <string name="topStories">Top Stories</string>
    <string name="mostPopular">Most Popular</string>
    <string name="business">Business</string>
    <array name="tab_title">
        <item>@string/topStories</item>
        <item>@string/mostPopular</item>
        <item>@string/business</item>
    </array>

    <!-- RecyclerView item -->
    <string name="article_thumbnail_description">Article thumbnail</string>

    <!-- SearchFragment EditText hint -->
    <string name="search_query_term">Search query term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>

    <!-- SearchFragment CheckBox text -->
    <string name="arts">Arts</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>

    <!-- SearchFragment AlertDialog content -->
    <string name="query_field_mandatory">Query terms are mandatory</string>
    <string name="category_field_mandatory">At least one category must be selected</string>

    <!-- NotificationFragment TextView content -->
    <string name="enable_notifications">Enable notifications (once per day)</string>

    <!-- Snackbar message -->
    <string name="connection_timed_out">Timed out! Please check your internet connection.</string>
    <string name="no_internet">No internet connection</string>
    <string name="unknown_error">Connection failed! An error has occurred.</string>
    <string name="no_article_found">No articles were found</string>

    <!-- Notification -->
    <string name="channel_id">My News channel ID</string>
    <string name="channel_name">New Published articles</string>
    <string name="notification_title">New articles were published!</string>

    <!-- Navigation Drawer -->
    <string name="header_image">header image</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>

    <!-- About dialog image -->
    <string name="new_york_times_api">Logo of the New York Times API</string>
</resources>
