<?xml version="1.0" encoding="utf-8"?>
<!--
    This layout is the SearchFragment and NotificationFragment content view.
    It is meant to be placed inside activity_search.
    This layout contains the widgets that allow user to:
        - perform an article search request,
        - schedule notifications.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:theme="@style/widgetTheme">

    <EditText
        android:id="@+id/queryInput"
        style="@style/mainComponentTheme"
        android:inputType="text"
        android:hint="@string/search_query_term" />

    <LinearLayout
        android:id="@+id/dateLayout"
        android:orientation="horizontal"
        style="@style/mainComponentTheme"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_date"
                style="?android:attr/hint" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/beginDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:drawableEnd="@drawable/ic_arrow_drop_down" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                style="?android:attr/hint" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/endDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:drawableEnd="@drawable/ic_arrow_drop_down" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkboxLayout"
        android:orientation="horizontal"
        style="@style/mainComponentTheme"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp">

            <CheckBox
                android:id="@+id/arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts" />

            <CheckBox
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business" />

            <CheckBox
                android:id="@+id/entrepreneurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrepreneurs" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <CheckBox
                android:id="@+id/politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politics" />

            <CheckBox
                android:id="@+id/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />

            <CheckBox
                android:id="@+id/travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/mainComponentTheme"
        android:layout_marginTop="20dp"
        android:text="@string/search_articles"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

</LinearLayout>